# haxl-local-test

./: LICENSE  README.md  haxl-local-test.cabal  stack.yaml
app/: Main.hs
src/: Actors.hs  Lib.hs  Movies.hs  Report.hs
src/DataSources/: Actors.hs  Movies.hs
