name:                haxl-local-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JustusAdam/haxl-local-test#readme
license:             BSD3
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
copyright:           2015
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Actors
    , Movies
  build-depends:
      base >= 4.7 && < 5
    , unordered-containers -any
    , haxl >=0.3
    , hashable >=1.2
    , async
  default-language:    Haskell2010

executable haxl-local-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , haxl-local-test
    , haxl
  default-language:    Haskell2010

test-suite haxl-local-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haxl-local-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/haxl-local-test
